feat: implement calculator UI, add launcher icons, and document Android build/signing processes